force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>This is where collaborators requests are stored</description>
    <label>Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>