force-app/main/default/objects/Request__c/fields/Absence_Days__c.field-meta.xml
<CustomField>
    <fullName>Absence_Days__c</fullName>
    <description>The number of days the collaborator was absent</description>
    <label>Absence Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>