force-app/main/default/objects/Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Add notes to the request for further clarification</description>
    <inlineHelpText>Add notes to the request for further clarification</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>