force-app/main/default/objects/Request__c/fields/PTO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PTO_End_Date__c</fullName>
    <description>Paid Time Off end date</description>
    <label>PTO End Date</label>
    <type>Date</type>
</CustomField>