force-app/main/default/objects/Request__c/fields/PTO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PTO_Start_Date__c</fullName>
    <description>Paid Time Off start date</description>
    <label>PTO Start Date</label>
    <type>Date</type>
</CustomField>