force-app/main/default/objects/Request__c/recordTypes/Complaints.recordType-meta.xml
<RecordType>
    <fullName>Complaints</fullName>
    <active>true</active>
    <description>This type of account holds info about complaints</description>
    <label>Complaints</label>
</RecordType>