force-app/main/default/objects/Request__c/recordTypes/Document_Request.recordType-meta.xml
<RecordType>
    <fullName>Document_Request</fullName>
    <active>true</active>
    <description>This type of account holds info about document requests</description>
    <label>Document Request</label>
</RecordType>