force-app/main/default/objects/Request__c/recordTypes/MutualCare_Request.recordType-meta.xml
<RecordType>
    <fullName>MutualCare_Request</fullName>
    <active>true</active>
    <description>This type of account holds info about MutualCare processes</description>
    <label>MutualCare Request</label>
</RecordType>