force-app/main/default/objects/Request__c/recordTypes/PTO_Request.recordType-meta.xml
<RecordType>
    <fullName>PTO_Request</fullName>
    <active>true</active>
    <description>The record type for PTO requests</description>
    <label>PTO Request</label>
</RecordType>